--- a/app/templates/index_page.html
+++ b/app/templates/index_page.html
@@ -38,24 +38,39 @@
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
         </script> -->
-        <table width="100%" border="0" cellpadding="10" cellspacing="1" bgcolor="#CCCCCC" style="margin:1em 0;">
+        <form>
+        	Host: <input type="text" placeholder="redis IP 地址" id="new_host" />&nbsp;&nbsp;
+        	Port: <input type="number" placeholder="6379" id="new_port" />&nbsp;&nbsp;
+        	Password: <input type="text" placeholder="" id="new_password" />&nbsp;&nbsp;
+        	Email: <input type="text" placeholder="报警提醒" id="new_email" />&nbsp;&nbsp;
+        	<input type="button" onclick="add_redis_btn_click()" value="添加/更新" />
+        </form>
+        <table id="redis_table" width="100%" border="0" cellpadding="10" cellspacing="1" bgcolor="#CCCCCC" style="margin:1em 0;">
             <tbody>
                 <tr>
-                    <th width="25%" bgcolor="#DDEEFF">Redis实例</th>
-                    <th width="75%" bgcolor="#DDEEFF">Redis Information</th>
+                    <th width="50%" bgcolor="#DDEEFF">Redis Information</th>
+                    <th width="30%" bgcolor="#DDEEFF">添加时间</th>
+                    <th width="20%" bgcolor="#DDEEFF">操作</th>
                 </tr>
+                <!-- 
                 {% for r in redis %}
                 <tr>
                     <td bgcolor="#FFFFCC"><strong>{{r.RD_NAME}}</strong></td>
                     <td bgcolor="#FFFFCC"><a href="{{loop.index0}}.html">{{r.RD_HOST}}:{{r.RD_PORT}}</a></td>
                 </tr>
                 {% endfor %}
+                 -->
             </tbody>
         </table>
         <p class="footer">
             <a href="/">Redis Monitor</a> &gt; Author By aTool.org
         </p>
     </div>
+    <script type="text/javascript" src="/static/res/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/res/js/common.js"></script>
+    <script type="text/javascript" src="/static/res/lib/md5.js"></script>
+    <script type="text/javascript" src="/static/res/lib/simpleStorage.js"></script>
+    <script type="text/javascript" src="/static/res/js/index.js"></script>
     <script type="text/javascript">
     window._bd_share_config={"common":{"bdSnsKey":{"tsina":"2337303479","tqq":"801368329"},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='//bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
     </script>
