--- a/app/templates/index_page.html
+++ b/app/templates/index_page.html
@@ -43,7 +43,8 @@
         	Port: <input type="number" placeholder="6379" id="new_port" />&nbsp;&nbsp;
         	Password: <input type="text" placeholder="" id="new_password" />&nbsp;&nbsp;
         	Email: <input type="text" placeholder="报警提醒" id="new_email" />&nbsp;&nbsp;
-        	<input type="button" onclick="add_redis_btn_click()" value="添加/更新" />
+        	<input type="button" onclick="add_redis_btn_click()" value="添加/更新" />&nbsp;
+        	<input type="button" onclick="add_demo_redis_btn_click()" value="来个示例" />
         </form>
         <table id="redis_table" width="100%" border="0" cellpadding="10" cellspacing="1" bgcolor="#CCCCCC" style="margin:1em 0;">
             <tbody>
